# listified

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  Taskfile.yml  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 740963925b9d_create_list_and_items_tables.py
src/: __init__.py
src/listified/: __init__.py  database.py  main.py  schemas.py  settings.py
src/listified/routers/: __init__.py  items.py  lists.py
static/: index.html
static/css/: custom.css
static/js/: app.js
tests/: __init__.py  conftest.py  test_items.py  test_lists.py
